--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .profile-section {
+    margin-bottom: 20px;
+    padding: 10px;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .card-section {
+    display: flex;
+    flex-wrap: wrap;
   }
-  to {
-    transform: rotate(360deg);
+
+  .card-section .card {
+    flex: 1 0 33.33%;
+    margin: 10px;
   }
+
+  .home-container {
+    position: relative;
+  }
+  .background-image {
+    background: linear-gradient(to right, #000, #120A56); /* Fondo con degradado */
+  }
+  
+  
+  
+  .custom-card {
+    background-color: #333;
+    color: #fff;
+    /* Agrega aquí los estilos adicionales que desees */
+  }
+  .img-fluid {
+    margin-left: 0px;
+    border-radius: 10px 0px 0px 10px;
+  }
+  .linkedin{
+    padding: 2px;
+  }
+  
+  
 }
