--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@
     position: relative;
   }
   .background-image {
-    background: linear-gradient(to right, #000, #120A56); /* Fondo con degradado */
+    background: linear-gradient(to right, #000, #120A56); 
   }
   
   
@@ -34,11 +34,12 @@
   .custom-card {
     background-color: #333;
     color: #fff;
-    /* Agrega aquí los estilos adicionales que desees */
+    
   }
   .img-fluid {
     margin-left: 0px;
     border-radius: 10px 0px 0px 10px;
+   
   }
   .linkedin{
     padding: 2px;
